# cuda-parallel-gpu-rendering

./: CMakeLists.txt  README.md
mproject/: CMakeLists.txt  _main.h  camera.h  command_line_tool.h  compute.h  gobject.h  hit.h  loader.h  mproject.cpp  mproject.h  multi_thread_tool.h  plane.h  ray.h  setting.h  sphere.h  triangle.h
source/: main.cpp
